# coq-of-python

./: .gitignore  .gitmodules  LICENSE  README.md  convert_all.py  main.py  output.txt
CoqOfPython/: CoqMakefile  CoqOfPython.v  _CoqProject  blacklist.txt  builtins.v  coq-of-python.opam  dataclasses.v  typing.v  typing_extensions.v
CoqOfPython/ethereum/: __init__.v  base_types.v  ethash.v  exceptions.v  fork_criteria.v  genesis.v  rlp.v  trace.v
CoqOfPython/ethereum/arrow_glacier/: __init__.v  blocks.v  bloom.v  fork.v  fork_types.v  state.v  transactions.v  trie.v
CoqOfPython/ethereum/berlin/: __init__.v  blocks.v  bloom.v  fork.v  fork_types.v  state.v  transactions.v  trie.v
CoqOfPython/ethereum/byzantium/: __init__.v  blocks.v  bloom.v  fork.v  fork_types.v  state.v  transactions.v  trie.v
CoqOfPython/ethereum/cancun/: __init__.v  blocks.v  bloom.v  fork.v  fork_types.v  state.v  transactions.v  trie.v
CoqOfPython/ethereum/constantinople/: __init__.v  blocks.v  bloom.v  fork.v  fork_types.v  state.v  transactions.v  trie.v
CoqOfPython/ethereum/crypto/: __init__.v  alt_bn128.v  blake2.v  elliptic_curve.v  finite_field.v  hash.v
CoqOfPython/ethereum/dao_fork/: __init__.v  blocks.v  bloom.v  dao.v  fork.v  fork_types.v  state.v  transactions.v  trie.v
CoqOfPython/ethereum/frontier/: __init__.v  blocks.v  bloom.v  fork.v  fork_types.v  state.v  transactions.v  trie.v
CoqOfPython/ethereum/gray_glacier/: __init__.v  blocks.v  bloom.v  fork.v  fork_types.v  (+3 more)
CoqOfPython/proofs/: CoqOfPython.v  heap.v
CoqOfPython/simulations/: CoqOfPython.v  builtins.v
(+611 files in other folders)
